[workspace]
resolver = "2"
members = ["pine-analytics"]

[workspace.dependencies]
linera-sdk = "=0.15.7"
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-derive = { version = "=7.0.17", default-features = false }
async-graphql-value = { version = "=7.0.17" }
async-graphql-parser = { version = "=7.0.17" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt", "sync"] }
futures = "0.3"
log = "0.4.27"
thiserror = "1.0"
hex = "0.4"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = "debuginfo"
